fix: align more to left star-wrapper-pos, testimonial title and testimonial content and changed image in testimonial page in media query min-width: 1025px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -914,7 +914,9 @@ form label {
        padding: 5px 20px;
        width: 20%;
        margin-top: 15px;
-   }
+
+       margin-left: 100px; 
+   }   
    .star-section h5{
        margin-top: 15px;
    }
@@ -930,17 +932,36 @@ form label {
    .test_title{
        padding-top: 10px;
        padding-bottom: 0px;
-       width: 960px;
+       /*width: 960px;*/
+       
+       width: 200px;
        height: 25px;
-       padding-left: 20px;
-       margin-left: 270px;       
+       
+       /*padding-left: 20px;
+       margin-left: 270px; */
+       
+       padding-left: 0px;
+       margin-left:  100px;
+       margin-right: 0px;
+       color: black;
+       border-style: solid; 
+
    }
    .review_container_pos{
        float: left;
-       width: 590px;
-       padding-left: 270px;
+       /*width: 590px;*/
+       width: 890px;
+
+       height: 410px;
+
+       /*padding-left: 270px;
+       padding-right: 20px;*/
+
+       margin-left:  80px;
        padding-right: 20px;
+       border-style: solid;
    }
+
    .user_review {
      padding: 0;
    }
